# hermes-scraper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
docker/: Dockerfile.llm_api  Dockerfile.processing  Dockerfile.scheduler  Dockerfile.scraper  docker-compose.yml
docs/: C4_Architecture.md  Documentation.md  Flows.md  results.txt  run.sh  run_local.sh
llm_api/: llm_client.py  main.py  prompts.py
llm_api/routers/: selectors.py
processing/: main.py  pipeline.py
processing/enrichers/: email_extractor.py  hashtag_extractor.py  screenshot.py
processing/extractors/: htmldate_extractor.py  jsonld.py  og_meta.py  readability_extractor.py
processing/filters/: deduplicator.py  extractor.py
processing/scoring/: merge.py  quality.py
scheduler/: main.py
scraper/: config.py  main.py  selector_client.py
scraper/anti_bot/: cookie_jar.py  proxy_pool.py  ua_rotator.py
scraper/detectors/: anti_bot.py
scraper/engines/: browser_engine.py  http_engine.py
scraper/fetchers/: static_fetcher.py
scraper/knowledge/: site_knowledge.py
scraper/navigation/: paginator.py
scraper/storage/: kafka_producer.py  raw_store.py
scripts/: db_migrate.py  scrape_sites.py  seed_sites.py  test_scraper.py
shared/: article_store.py  db.py  kafka.py  logging.py  metrics.py  models.py  url_utils.py
tests/: conftest.py
tests/integration/: test_adevarul.py  test_biziday.py  test_euronews.py
tests/unit/: test_anti_bot.py  (+10 more)
